=head1 Changes in DBD-Oracle 1.17 (svn rev 2429)   XXth January 2005

  Fixed automatic csform setting for some UTF8 cases and for Oracle 8.0
  Fixed truncation error on fetch into UTF8 charset thanks to Honza Pazdziora.
  Fixed INTERVAL DAY TO SECOND thanks to Honza Pazdziora.
  Fixed undef warnings when connecting with undef $user.
  Fixed undef warnings from $dbh->get_info(18);
  Fixed LOB streaming example thanks to Pablo Zorzoli.

  Added support for nested cursors in select lists thanks to Charles Jardine.
  Added "Trailing Spaces" section to docs thanks to Michael A Chase.
  Added support for binary floats/doubles thanks to Dennis Box.
  Added INSTANCE_NAME, SERVER and SERVICE_NAME as valid connect keywords
    in the 'dbi:Oracle:x=y' short form of connecting without tnsnames.ora.
    For example 'dbi:Oracle:host=localhost;service_name=xe;server=dedicated'

  Changed "Binding Cursors" docs, clarifying examples thanks to Charles Jardine.
  Changed tests to use ORACLE_DSN or DBI_DSN env vars if defined thanks to Jill Vogel.
  Updated README.vms re logical name tables thanks to Jakob Snoer.
  Removed README.utf8 since the topic was covered better in the main docs.
  Updated README.aix thanks to Stephen de Vries.
  Updated README.macosx thanks to Stephen de Vries.
  Renamed README.*'s to add .txt suffix to make life easier for some.

  Changes to Makefile.PL:
    Instant Client support thanks to Hilmar Lapp, John Scoles and others.
    Improved HP-UX support thanks to H.Merijn Brand.
    Avoid risk of sqlplus hanging thanks to Mark Dedlow.
    More reliably use correct sqlplus thanks to Honza Pazdziora.
    Improved build rule and Oracle header file detection.
    Improved cygwin build thanks to Andy Hassall.
    VMS logical name checks thanks to Jakob Snoer.

  The Copyright terms for DBD::Oracle have been simplified and now read:
    The DBD::Oracle module is free open source software; you can